Start universal Vassiliev invariant

--- a/references.bib
+++ b/references.bib
@@ -71,7 +71,7 @@
 	title = {{Finite-type invariants of w-knotted objects, I: w-knots and
 	         the Alexander polynomial}},
 	volume = {16},
-	journal = {Algebraic & Geometric Topology},
+	journal = {Algebraic \& Geometric Topology},
 	number = {2},
 	publisher = {MSP},
 	pages = {1063 -- 1133},
